<resources>
    <string name="app_name">library</string>
    <string name="progresshud_loading">加载中</string>
    <string name="sending">发送中</string>
    <string name="input_pwd">请输入交易密码</string>
    <string name="rob_logout">您的账号存在异常，在其他地方使用，请确认账号安全。</string>
    <string name="net_error">网络异常</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="logout_sure">确定要退出？</string>
    <string name="email_sure">确定要发邮件到</string>
    <string name="cancel">取消</string>
    <string name="share">分享到</string>
    <string name="friend">微信好友</string>
    <string name="dynamic">朋友圈</string>
    <string name="update">更新</string>
    <string name="update_version">更新版本：</string>
    <string name="now_version">当前版本：</string>
    <string name="update_content">更新内容</string>
</resources>
